<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.certification.join.JoinFragment">

    <ImageView
        android:id="@+id/img_main_Top_Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_logo_small"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_24"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/img_main_Top_Logo"
        app:layout_constraintEnd_toStartOf="@+id/img_main_Top_Logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_main_Top_Logo"
        />


    <TextView
        android:id="@+id/tv_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_sign_up"
        style="@style/BlackExtraBoldText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_main_Top_Logo"
        />

    <View
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:id="@+id/tv_email"
        style="@style/BlackBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:hint="@string/hint_email"
        style="@style/DefaultTextInputLayout"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintEnd_toStartOf="@+id/img_et">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/img_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_at"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/til_email"
        app:layout_constraintStart_toEndOf="@id/til_email"
        app:layout_constraintTop_toTopOf="@id/til_email"
        app:layout_constraintEnd_toStartOf="@+id/til_select_email"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_select_email"
        style="@style/DropDownTextInputLayout"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:hint="@string/hint_select"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/til_email"
        app:layout_constraintStart_toEndOf="@+id/img_et"
        app:layout_constraintTop_toTopOf="@+id/til_email"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/act_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_email_auth"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main_color"
        android:text="@string/btn_auth_confirm"
        style="@style/DefaultBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_et" />


    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_pwd"
        style="@style/BlackBoldText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_email_auth"
        />

    <TextView
        android:id="@+id/tv_password_format"
        style="@style/BlackMediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pwd_format"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="380dp"
        android:layout_height="55dp"
        android:hint="@string/hint_pwd"
        style="@style/PasswordTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password_format"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_pwd_check"
        style="@style/BlackBoldText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_confirm"
        android:layout_width="380dp"
        android:layout_height="55dp"
        android:hint="@string/hint_pwd_check"
        style="@style/PasswordTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password_confirm"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_agree"
        style="@style/BlackBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_terms_agree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password_confirm" />

    <CheckBox
        android:id="@+id/cb_agree_all"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="36dp"
        android:checked="false"
        android:text="@string/tv_terms_agree_all"
        style="@style/BlackBoldText"
        app:layout_constraintBottom_toTopOf="@+id/spacer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_agree" />

    <TextView
        android:id="@+id/tv_agree_all_subString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="선택항목에 대한 동의 포함"
        app:layout_constraintBottom_toBottomOf="@+id/cb_agree_all"
        app:layout_constraintStart_toEndOf="@+id/cb_agree_all"
        app:layout_constraintTop_toTopOf="@id/cb_agree_all"
        app:layout_constraintVertical_bias="0.5
" />

    <View
        android:id="@+id/spacer2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cb_agree_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <CheckBox
        android:id="@+id/cb_agree_1"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="54dp"
        android:checked="false"
        android:text="@string/tv_terms_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(필수)"
        android:textSize="12sp"
        android:textColor="@color/main_color"
        app:layout_constraintStart_toEndOf="@id/cb_agree_1"
        app:layout_constraintTop_toTopOf="@id/cb_agree_1"
        app:layout_constraintBottom_toBottomOf="@id/cb_agree_1"
        />


    <CheckBox
        android:id="@+id/cb_agree_2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:checked="false"
        android:text="@string/tv_terms_use"
        app:layout_constraintStart_toStartOf="@+id/cb_agree_1"
        app:layout_constraintTop_toBottomOf="@+id/cb_agree_1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(필수)"
        android:textSize="12sp"
        android:textColor="@color/main_color"
        app:layout_constraintStart_toEndOf="@id/cb_agree_2"
        app:layout_constraintTop_toTopOf="@id/cb_agree_2"
        app:layout_constraintBottom_toBottomOf="@id/cb_agree_2"
        />

    <CheckBox
        android:id="@+id/cb_agree_3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:checked="false"
        android:text="@string/tv_terms_info"
        app:layout_constraintStart_toStartOf="@+id/cb_agree_2"
        app:layout_constraintTop_toBottomOf="@+id/cb_agree_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(필수)"
        android:textSize="12sp"
        android:textColor="@color/main_color"
        app:layout_constraintStart_toEndOf="@id/cb_agree_3"
        app:layout_constraintTop_toTopOf="@id/cb_agree_3"
        app:layout_constraintBottom_toBottomOf="@id/cb_agree_3"
        />

    <CheckBox
        android:id="@+id/cb_agree_4"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:checked="false"
        android:text="@string/tv_terms_marketing"
        app:layout_constraintStart_toStartOf="@+id/cb_agree_3"
        app:layout_constraintTop_toBottomOf="@+id/cb_agree_3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(필수)"
        android:textSize="12sp"
        android:textColor="@color/main_color"
        app:layout_constraintStart_toEndOf="@id/cb_agree_4"
        app:layout_constraintTop_toTopOf="@id/cb_agree_4"
        app:layout_constraintBottom_toBottomOf="@id/cb_agree_4"
        />


</androidx.constraintlayout.widget.ConstraintLayout>